// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Switch renders 1`] = `
<div
  className="wrapper"
>
  <input
    checked={false}
    className="input"
    name="test"
    onClick={[Function]}
    type="checkbox"
  />
  <div
    className="container"
  >
    <svg
      aria-hidden="true"
      className="circle"
      viewBox="0 0 16 16"
    >
      <circle
        cx="8"
        cy="8"
        r="8"
      />
    </svg>
  </div>
</div>
`;

exports[`Switch renders a checked variant 1`] = `
<div
  className="wrapper"
>
  <input
    checked={true}
    className="input"
    name="test"
    onClick={[Function]}
    type="checkbox"
  />
  <div
    className="container"
  >
    <svg
      aria-hidden="true"
      className="circle"
      viewBox="0 0 16 16"
    >
      <circle
        cx="8"
        cy="8"
        r="8"
      />
    </svg>
  </div>
</div>
`;

exports[`Switch renders a large variant 1`] = `
<div
  className="wrapper"
>
  <input
    checked={false}
    className="input"
    name="test"
    onClick={[Function]}
    type="checkbox"
  />
  <div
    className="large container"
  >
    <svg
      aria-hidden="true"
      className="circle"
      viewBox="0 0 16 16"
    >
      <circle
        cx="8"
        cy="8"
        r="8"
      />
    </svg>
  </div>
</div>
`;
